samples/_failures_safe/1761478348_2d579d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_51d38c68.c: In function ‘main’:
./samples/SAFE/__tmp_51d38c68.c:144:39: error: ‘mat’ undeclared (first use in this function); did you mean ‘mat2’?
  144 |     struct Matrix sum = add_matrices(&mat
      |                                       ^~~
      |                                       mat2
./samples/SAFE/__tmp_51d38c68.c:144:39: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_51d38c68.c:144:42: error: expected ‘)’ at end of input
  144 |     struct Matrix sum = add_matrices(&mat
      |                                     ~    ^
      |                                          )
./samples/SAFE/__tmp_51d38c68.c:144:25: error: too few arguments to function ‘add_matrices’
  144 |     struct Matrix sum = add_matrices(&mat
      |                         ^~~~~~~~~~~~
./samples/SAFE/__tmp_51d38c68.c:47:15: note: declared here
   47 | struct Matrix add_matrices(const struct Matrix *a, const struct Matrix *b) {
      |               ^~~~~~~~~~~~
./samples/SAFE/__tmp_51d38c68.c:144:12: error: expected declaration or statement at end of input
  144 |     struct Matrix sum = add_matrices(&mat
      |            ^~~~~~
